--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     
-    Hola mundo
+    <h1>Titulo</h1>
+    <p>Parrafo</p>
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ul>
+
 
 </body>
 </html>
